Introduced fragments and material library. Course and Player creation implemented.

--- a/app/src/main/res/values/ic_launcher_background.xml
+++ b/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="red">Red</string>
+    <color name="ic_launcher_background">#7CB342</color>
 </resources>
