--- a/app/src/main/res/layout/table_text_cell.xml
+++ b/app/src/main/res/layout/table_text_cell.xml
@@ -3,6 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:padding="4sp"
+        android:textAlignment="textStart"
+        android:padding="4dp"
+        android:layout_marginTop="2dp"
+        android:background="@color/primaryDarkColor"
         android:text="@string/dummy_text"/>
