--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
-
-    <color name="text_color">#6F1C7E</color>
-    <color name="table_header_bg">#9B4842</color>
-    <color name="table_header_text">#0C1549</color>
-    <color name="table_bg">#E47870</color>
-    <color name="color_bg">#4CAF50</color>
-    <color name="table_value_text">#000000</color>
-    <color name="table_value_bg">#FFFFFF</color>
-
-    <color name="delete_button_color">#BD1F1F</color>
+    <color name="primaryColor">#7cb342</color>
+    <color name="primaryLightColor">#aee571</color>
+    <color name="primaryDarkColor">#4b830d</color>
+    <color name="secondaryColor">#616161</color>
+    <color name="secondaryLightColor">#8e8e8e</color>
+    <color name="secondaryDarkColor">#373737</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#ffffff</color>
+    <color name="transparentBG">#B3616161</color>
 </resources>
