--- a/app/src/main/res/values/teeColors.xml
+++ b/app/src/main/res/values/teeColors.xml
@@ -7,5 +7,5 @@
     <color name="red">#B50E02</color>
     <color name="purple">#673AB7</color>
     <color name="green">#8BC34A</color>
-    <color name="orange">#FF3F03</color>
+    <color name="orange">#FF9800</color>
 </resources>
