HCP and PAR labels externalised, initial styles support

--- a/app/src/main/res/layout/fragment_edit_player.xml
+++ b/app/src/main/res/layout/fragment_edit_player.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
-            android:hint="@string/player_hcp">
+            android:hint="@string/hcp">
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/hcp_edit_text"
                 android:layout_width="match_parent"
