--- a/app/src/main/res/layout/fragment_edit_course.xml
+++ b/app/src/main/res/layout/fragment_edit_course.xml
@@ -77,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:text="PAR"
+                    android:text="@string/par"
                     android:layout_margin="6dp"/>
             <include
                     layout="@layout/holes_input_table"
@@ -85,7 +85,7 @@
             <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="HCP"
+                    android:text="@string/hcp"
                     android:layout_margin="6dp"/>
             <include
                     layout="@layout/holes_input_table"
