--- a/app/src/main/res/layout/fragment_edit_tee.xml
+++ b/app/src/main/res/layout/fragment_edit_tee.xml
@@ -66,31 +66,32 @@
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
             <com.google.android.material.button.MaterialButton
                     android:id="@+id/delete_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@id/cancel_button"
                     android:layout_marginEnd="12dp"
                     android:visibility="gone"
+                    android:layout_weight="1"
                     android:text="@string/delete_button_label"/>
             <com.google.android.material.button.MaterialButton
                     android:id="@+id/cancel_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@id/save_button"
+                    android:layout_weight="1"
                     android:layout_marginEnd="12dp"
                     android:text="@string/cancel_button_label"/>
             <com.google.android.material.button.MaterialButton
                     android:id="@+id/save_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
+                    android:layout_weight="1"
                     android:layout_marginEnd="6dp"
                     android:text="@string/save_button_label"/>
-        </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 </FrameLayout>
