--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="standard_text_size">16sp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
 </resources>
