--- a/app/src/main/res/layout/fragment_edit_player.xml
+++ b/app/src/main/res/layout/fragment_edit_player.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content">
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/delete_button"
+                style="@style/Widget.Scorecard.Button.DeleteButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toStartOf="@id/cancel_button"
