--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -10,14 +10,20 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-        <TableLayout
+        <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/courses_table"/>
+                android:layout_height="match_parent">
+            <TableLayout
+                    android:id="@+id/courses_table"
+                    style="@style/Widget.Scorecard.Table.Layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+        </HorizontalScrollView>
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/create_course_button"
+        style="@style/Widget.Scorecard.Button.CreateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
