--- a/app/src/main/res/layout/fragment_edit_tee.xml
+++ b/app/src/main/res/layout/fragment_edit_tee.xml
@@ -72,6 +72,7 @@
                 android:orientation="horizontal">
             <com.google.android.material.button.MaterialButton
                     android:id="@+id/delete_button"
+                    style="@style/Widget.Scorecard.Button.DeleteButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
