--- a/app/src/main/res/layout/fragment_players.xml
+++ b/app/src/main/res/layout/fragment_players.xml
@@ -11,15 +11,19 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-
-        <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/players_table"/>
+        <HorizontalScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <TableLayout
+                    android:id="@+id/players_table"
+                    style="@style/Widget.Scorecard.Table.Layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+        </HorizontalScrollView>
     </androidx.core.widget.NestedScrollView>
-
     <com.google.android.material.button.MaterialButton
             android:id="@+id/create_player_button"
+            style="@style/Widget.Scorecard.Button.CreateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
