--- a/app/src/main/res/layout/table_header_cell.xml
+++ b/app/src/main/res/layout/table_header_cell.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
+        style="@style/Widget.Scorecard.Table.Cell.Header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:padding="4sp"
         android:text="@string/dummy_text"/>
