--- a/app/src/main/res/layout/fragment_edit_tee.xml
+++ b/app/src/main/res/layout/fragment_edit_tee.xml
@@ -11,7 +11,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
-            android:background="@color/secondaryLightColor">
+            android:layout_marginTop="15dp"
+            android:background="@color/primaryBackgroundColor">
 
         <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -75,7 +76,8 @@
                     style="@style/Widget.Scorecard.Button.DeleteButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="12dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginEnd="6dp"
                     android:visibility="gone"
                     android:layout_weight="1"
                     android:text="@string/delete_button_label"/>
@@ -84,13 +86,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_marginEnd="12dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginEnd="6dp"
                     android:text="@string/cancel_button_label"/>
             <com.google.android.material.button.MaterialButton
                     android:id="@+id/save_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginStart="6dp"
                     android:layout_marginEnd="6dp"
                     android:text="@string/save_button_label"/>
         </LinearLayout>
