--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="primaryColor">#7cb342</color>
     <color name="primaryLightColor">#aee571</color>
     <color name="primaryDarkColor">#4b830d</color>
+    <color name="primaryBackgroundColor">#000000</color>
     <color name="secondaryColor">#616161</color>
     <color name="secondaryLightColor">#8e8e8e</color>
     <color name="secondaryDarkColor">#373737</color>
